PS-2018.3.3 <mong@133.232.119.18.static.zoot.jp Update find.xml, user.xml

--- a/templates/user.xml
+++ b/templates/user.xml
@@ -23,4 +23,5 @@
       <option name="CSS" value="true" />
     </context>
   </template>
+  <template name="@media" value="@media screen, (max-width: 768px){&#10;}" description="media query plane" toReformat="false" toShortenFQNames="true" />
 </templateSet>
