--- a/templates/user.xml
+++ b/templates/user.xml
@@ -24,12 +24,12 @@
     </context>
   </template>
   <template name="@media" value="@media screen, (max-width: 768px){&#10;}" description="media query plane" toReformat="false" toShortenFQNames="true" />
-  <template name="mqfrom" value="@include mq-fromto(){&#10;&#10;}" toReformat="false" toShortenFQNames="true">
+  <template name="mqfrom" value="@include mq-fromto(){&#10;&#10;}" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="CSS" value="true" />
     </context>
   </template>
-  <template name="mqmin" value="@include mq-min(){&#10;}" toReformat="false" toShortenFQNames="true">
+  <template name="mqmin" value="@include mq-min(){&#10;}" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="CSS" value="true" />
     </context>
